Data Cleaning (MVan)

--- a/notebooks/cleaning_data.ipynb
+++ b/notebooks/cleaning_data.ipynb
@@ -3168,6 +3168,365 @@
     "# save to csv\n",
     "MoTIm_data_wind_clean.to_csv(f'{path_2}/MoTIm_data_wind_clean.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MVan Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MVan_data = functions.to_df('MVan_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_names, column_nulls, duplicate_row_index = functions.start_cleaning(MVan_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column names: ['WDIR_VECT', ' time', ' WSPD_SCLR', ' HUMIDITY', 'filename']\n",
+      "column nulls: WDIR_VECT       6022\n",
+      " time              0\n",
+      " WSPD_SCLR    157014\n",
+      " HUMIDITY     104506\n",
+      "filename           0\n",
+      "dtype: int64\n",
+      "duplicate rows: Int64Index([], dtype='int64')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(283907, 5)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f'column names: {column_names}')\n",
+    "print(f'column nulls: {column_nulls}')\n",
+    "print(f'duplicate rows: {duplicate_row_index}')\n",
+    "MVan_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only keep variables of interest\n",
+    "# no solar data available from this network\n",
+    "MVan_data_wind = MVan_data.loc[:,(' time', ' WSPD_SCLR', ' HUMIDITY', 'filename')] \n",
+    "    # note that no air pressure or air temperature values are available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time              0\n",
+       " WSPD_SCLR    157014\n",
+       " HUMIDITY     104506\n",
+       "filename           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count null values in wind data\n",
+    "MVan_data_wind.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time             0\n",
+       " WSPD_SCLR        0\n",
+       " HUMIDITY     56876\n",
+       "filename          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows in wind data that do not have WindSpeed values\n",
+    "MVan_data_wind_clean = MVan_data_wind.dropna(subset=[' WSPD_SCLR'])\n",
+    "MVan_data_wind_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1.38889\n",
+       "1     3.33334\n",
+       "2     1.66667\n",
+       "3     2.22222\n",
+       "4     1.94445\n",
+       "5     1.38889\n",
+       "6     2.22222\n",
+       "7     1.38889\n",
+       "8     1.66667\n",
+       "9     1.38889\n",
+       "10    2.22222\n",
+       "11    3.33334\n",
+       "12    3.61111\n",
+       "13    4.16667\n",
+       "14    3.05556\n",
+       "Name:  WSPD_SCLR, dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MVan_data_wind_clean[' WSPD_SCLR'].head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\maddy\\AppData\\Local\\Temp\\ipykernel_15012\\215389386.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  MVan_data_wind_clean.loc[:,' WSPD_SCLR'] = MVan_data_wind_clean.loc[:,' WSPD_SCLR'].div(3.6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>WSPD_SCLR</th>\n",
+       "      <th>HUMIDITY</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000-01-01 00:00:00</td>\n",
+       "      <td>0.385803</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000-01-01 01:00:00</td>\n",
+       "      <td>0.925928</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-01-01 02:00:00</td>\n",
+       "      <td>0.462964</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000-01-01 03:00:00</td>\n",
+       "      <td>0.617283</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000-01-01 04:00:00</td>\n",
+       "      <td>0.540125</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2000-01-01 05:00:00</td>\n",
+       "      <td>0.385803</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2000-01-01 06:00:00</td>\n",
+       "      <td>0.617283</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2000-01-01 07:00:00</td>\n",
+       "      <td>0.385803</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2000-01-01 08:00:00</td>\n",
+       "      <td>0.462964</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2000-01-01 09:00:00</td>\n",
+       "      <td>0.385803</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2000-01-01 10:00:00</td>\n",
+       "      <td>0.617283</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2000-01-01 11:00:00</td>\n",
+       "      <td>0.925928</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2000-01-01 12:00:00</td>\n",
+       "      <td>1.003086</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2000-01-01 13:00:00</td>\n",
+       "      <td>1.157408</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2000-01-01 14:00:00</td>\n",
+       "      <td>0.848767</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12.csv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    time   WSPD_SCLR   HUMIDITY filename\n",
+       "0    2000-01-01 00:00:00    0.385803        NaN  T12.csv\n",
+       "1    2000-01-01 01:00:00    0.925928        NaN  T12.csv\n",
+       "2    2000-01-01 02:00:00    0.462964        NaN  T12.csv\n",
+       "3    2000-01-01 03:00:00    0.617283        NaN  T12.csv\n",
+       "4    2000-01-01 04:00:00    0.540125        NaN  T12.csv\n",
+       "5    2000-01-01 05:00:00    0.385803        NaN  T12.csv\n",
+       "6    2000-01-01 06:00:00    0.617283        NaN  T12.csv\n",
+       "7    2000-01-01 07:00:00    0.385803        NaN  T12.csv\n",
+       "8    2000-01-01 08:00:00    0.462964        NaN  T12.csv\n",
+       "9    2000-01-01 09:00:00    0.385803        NaN  T12.csv\n",
+       "10   2000-01-01 10:00:00    0.617283        NaN  T12.csv\n",
+       "11   2000-01-01 11:00:00    0.925928        NaN  T12.csv\n",
+       "12   2000-01-01 12:00:00    1.003086        NaN  T12.csv\n",
+       "13   2000-01-01 13:00:00    1.157408        NaN  T12.csv\n",
+       "14   2000-01-01 14:00:00    0.848767        NaN  T12.csv"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert windspeed values from km/h to m/s by dividing values by 3.6\n",
+    "MVan_data_wind_clean.loc[:,' WSPD_SCLR'] = MVan_data_wind_clean.loc[:,' WSPD_SCLR'].div(3.6)\n",
+    "MVan_data_wind_clean.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "MVan_data_wind_clean.to_csv(f'{path_2}/MVan_data_wind_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
