Data Cleaning (UNBC_CAM)

--- a/notebooks/cleaning_data.ipynb
+++ b/notebooks/cleaning_data.ipynb
@@ -3526,7 +3526,236 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### UNBC_CAM Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UNBC_CAM_data = functions.to_df('UNBC_CAM_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_names, column_nulls, duplicate_row_index = functions.start_cleaning(UNBC_CAM_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column names: ['Rain_Tot', ' Solar_Avg', ' Solar_Std', ' WS_Std', ' AirTC', ' time', ' RH', ' WindDir_Avg', ' DBTCDT', 'filename', ' Pressure', 'WS_Std', ' WindDir_Std', ' WS_Avg', 'Solar_Avg', 'K_Dn_Avg', ' Rain_Tot', ' L_Dn_Avg', ' L_Up_Avg', ' K_Up_Avg']\n",
+      "column nulls: Rain_Tot        1022965\n",
+      " Solar_Avg      1988163\n",
+      " Solar_Std      2097928\n",
+      " WS_Std          482661\n",
+      " AirTC           178388\n",
+      " time                 0\n",
+      " RH              145556\n",
+      " WindDir_Avg     780710\n",
+      " DBTCDT          307674\n",
+      "filename              0\n",
+      " Pressure        811623\n",
+      "WS_Std          2427244\n",
+      " WindDir_Std    2392832\n",
+      " WS_Avg         2045467\n",
+      "Solar_Avg       2596682\n",
+      "K_Dn_Avg        2305685\n",
+      " Rain_Tot       2305689\n",
+      " L_Dn_Avg       2305685\n",
+      " L_Up_Avg       2305685\n",
+      " K_Up_Avg       2305685\n",
+      "dtype: int64\n",
+      "duplicate rows: Int64Index([], dtype='int64')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2634998, 20)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f'column names: {column_names}')\n",
+    "print(f'column nulls: {column_nulls}')\n",
+    "print(f'duplicate rows: {duplicate_row_index}')\n",
+    "UNBC_CAM_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only keep variables of interest\n",
+    "UNBC_CAM_data_solar = UNBC_CAM_data.loc[:,(' time', 'Solar_Avg', ' Solar_Avg', 'filename')]\n",
+    "UNBC_CAM_data_wind = UNBC_CAM_data.loc[:,(' time', ' WS_Avg', ' AirTC', ' RH', ' Pressure', 'filename')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time               0\n",
+       "Solar_Avg     2596682\n",
+       " Solar_Avg    1988163\n",
+       "filename            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count null values in solar data\n",
+    "UNBC_CAM_data_solar.isna().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2634998, 4)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compare with overall size of solar data\n",
+    "UNBC_CAM_data_solar.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time              0\n",
+       "Solar_Avg     646835\n",
+       " Solar_Avg     38316\n",
+       "filename           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows in solar data that do not have SolarRadiation values\n",
+    "UNBC_CAM_data_solar_clean = UNBC_CAM_data_solar.dropna(subset=['Solar_Avg', ' Solar_Avg'], how='all')\n",
+    "UNBC_CAM_data_solar_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UNBC_CAM_data_solar_clean.to_csv(f'{path_2}/UNBC_CAM_data_solar_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time              0\n",
+       " WS_Avg      2045467\n",
+       " AirTC        178388\n",
+       " RH           145556\n",
+       " Pressure     811623\n",
+       "filename           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count null values in wind data\n",
+    "UNBC_CAM_data_wind.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time            0\n",
+       " WS_Avg          0\n",
+       " AirTC       17648\n",
+       " RH              0\n",
+       " Pressure    18052\n",
+       "filename         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows in wind data that do not have WindSpeed values\n",
+    "UNBC_CAM_data_wind_clean = UNBC_CAM_data_wind.dropna(subset=[' WS_Avg'])\n",
+    "UNBC_CAM_data_wind_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "UNBC_CAM_data_wind_clean.to_csv(f'{path_2}/UNBC_CAM_data_wind_clean.csv')"
+   ]
   }
  ],
  "metadata": {
