Continued data cleaning in pgAdmin4
Data cleaning, uploading tables to database, handling null values

--- a/notebooks/importing_data.ipynb
+++ b/notebooks/importing_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
        "[7022 rows x 14 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1980,59 +1980,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Network Name</th>\n",
-       "      <th>Native ID</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Elevation (m)</th>\n",
-       "      <th>Variables</th>\n",
+       "      <th>network_id</th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>elevation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ENV-AQN</td>\n",
+       "      <td>ENV_AQN</td>\n",
        "      <td>M114017</td>\n",
        "      <td>49.321667</td>\n",
        "      <td>-117.640278</td>\n",
        "      <td>449.0</td>\n",
-       "      <td>Temperature (Mean)|Wind Direction (Point)|Wind...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ENV-AQN</td>\n",
+       "      <td>ENV_AQN</td>\n",
        "      <td>E230557</td>\n",
        "      <td>54.691111</td>\n",
        "      <td>-127.054722</td>\n",
        "      <td>510.0</td>\n",
-       "      <td>Relative Humidity (Point)|Relative Humidity|Te...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ENV-AQN</td>\n",
+       "      <td>ENV_AQN</td>\n",
        "      <td>M107028</td>\n",
        "      <td>54.518333</td>\n",
        "      <td>-128.597500</td>\n",
        "      <td>80.0</td>\n",
-       "      <td>Relative Humidity|Temperature (Mean)|Wind Dire...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ENV-AQN</td>\n",
+       "      <td>ENV_AQN</td>\n",
        "      <td>E248021</td>\n",
        "      <td>50.987222</td>\n",
        "      <td>-118.188333</td>\n",
        "      <td>1500.0</td>\n",
-       "      <td>Relative Humidity (Point)|Relative Humidity|Te...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ENV-AQN</td>\n",
+       "      <td>ENV_AQN</td>\n",
        "      <td>E230617</td>\n",
        "      <td>51.653333</td>\n",
        "      <td>-121.365000</td>\n",
        "      <td>1063.0</td>\n",
-       "      <td>Precipitation Amount|Precipitation Climatology...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2041,103 +2035,89 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2033</th>\n",
-       "      <td>FLNRO-FERN</td>\n",
+       "      <td>FLNRO_FERN</td>\n",
        "      <td>BednestiTamarac</td>\n",
        "      <td>53.871330</td>\n",
        "      <td>-123.370400</td>\n",
        "      <td>865.0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2034</th>\n",
-       "      <td>FLNRO-FERN</td>\n",
+       "      <td>FLNRO_FERN</td>\n",
        "      <td>Chapman</td>\n",
        "      <td>54.883900</td>\n",
        "      <td>-126.623500</td>\n",
        "      <td>848.0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2035</th>\n",
-       "      <td>FLNRO-FERN</td>\n",
+       "      <td>FLNRO_FERN</td>\n",
        "      <td>McDonn</td>\n",
        "      <td>54.782170</td>\n",
        "      <td>-127.514300</td>\n",
        "      <td>980.0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2036</th>\n",
-       "      <td>FLNRO-FERN</td>\n",
+       "      <td>FLNRO_FERN</td>\n",
        "      <td>NorthFraser</td>\n",
        "      <td>54.243850</td>\n",
        "      <td>-122.490700</td>\n",
        "      <td>698.0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2037</th>\n",
-       "      <td>FLNRO-FERN</td>\n",
+       "      <td>FLNRO_FERN</td>\n",
        "      <td>StoneCreek</td>\n",
        "      <td>53.616220</td>\n",
        "      <td>-122.537900</td>\n",
        "      <td>881.0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2038 rows × 6 columns</p>\n",
+       "<p>2038 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Network Name        Native ID   Latitude   Longitude  Elevation (m)  \\\n",
-       "0         ENV-AQN          M114017  49.321667 -117.640278          449.0   \n",
-       "1         ENV-AQN          E230557  54.691111 -127.054722          510.0   \n",
-       "2         ENV-AQN          M107028  54.518333 -128.597500           80.0   \n",
-       "3         ENV-AQN          E248021  50.987222 -118.188333         1500.0   \n",
-       "4         ENV-AQN          E230617  51.653333 -121.365000         1063.0   \n",
-       "...           ...              ...        ...         ...            ...   \n",
-       "2033   FLNRO-FERN  BednestiTamarac  53.871330 -123.370400          865.0   \n",
-       "2034   FLNRO-FERN          Chapman  54.883900 -126.623500          848.0   \n",
-       "2035   FLNRO-FERN           McDonn  54.782170 -127.514300          980.0   \n",
-       "2036   FLNRO-FERN      NorthFraser  54.243850 -122.490700          698.0   \n",
-       "2037   FLNRO-FERN       StoneCreek  53.616220 -122.537900          881.0   \n",
+       "      network_id       station_id   latitude   longitude  elevation\n",
+       "0        ENV_AQN          M114017  49.321667 -117.640278      449.0\n",
+       "1        ENV_AQN          E230557  54.691111 -127.054722      510.0\n",
+       "2        ENV_AQN          M107028  54.518333 -128.597500       80.0\n",
+       "3        ENV_AQN          E248021  50.987222 -118.188333     1500.0\n",
+       "4        ENV_AQN          E230617  51.653333 -121.365000     1063.0\n",
+       "...          ...              ...        ...         ...        ...\n",
+       "2033  FLNRO_FERN  BednestiTamarac  53.871330 -123.370400      865.0\n",
+       "2034  FLNRO_FERN          Chapman  54.883900 -126.623500      848.0\n",
+       "2035  FLNRO_FERN           McDonn  54.782170 -127.514300      980.0\n",
+       "2036  FLNRO_FERN      NorthFraser  54.243850 -122.490700      698.0\n",
+       "2037  FLNRO_FERN       StoneCreek  53.616220 -122.537900      881.0\n",
        "\n",
-       "                                              Variables  \n",
-       "0     Temperature (Mean)|Wind Direction (Point)|Wind...  \n",
-       "1     Relative Humidity (Point)|Relative Humidity|Te...  \n",
-       "2     Relative Humidity|Temperature (Mean)|Wind Dire...  \n",
-       "3     Relative Humidity (Point)|Relative Humidity|Te...  \n",
-       "4     Precipitation Amount|Precipitation Climatology...  \n",
-       "...                                                 ...  \n",
-       "2033                                                NaN  \n",
-       "2034                                                NaN  \n",
-       "2035                                                NaN  \n",
-       "2036                                                NaN  \n",
-       "2037                                                NaN  \n",
-       "\n",
-       "[2038 rows x 6 columns]"
+       "[2038 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# specify only the relevant networks and variables\n",
-    "station_metadata_clean = station_metadata.loc[station_metadata[\"Network Name\"].isin(['ENV-AQN','FLNRO-FERN','FLNRO-WMB','MoTIm','MoTIe','EC_raw','BCH','CRD','UNBC_CAM','MVan']), [\"Network Name\",\"Native ID\",\"Latitude\",\"Longitude\",\"Elevation (m)\",\"Variables\"]]\n",
+    "station_metadata_filtered = station_metadata.loc[station_metadata[\"Network Name\"].isin(['ENV-AQN','FLNRO-FERN','FLNRO-WMB','MoTIm','MoTIe','EC_raw','BCH','CRD','UNBC_CAM','MVan']), [\"Network Name\",\"Native ID\",\"Latitude\",\"Longitude\",\"Elevation (m)\"]]\n",
+    "# rename columns\n",
+    "station_metadata_clean = station_metadata_filtered.rename(columns={\"Network Name\": \"network_id\", \"Native ID\": \"station_id\", \"Latitude\": \"latitude\", \"Longitude\": \"longitude\", \"Elevation (m)\": \"elevation\"})\n",
+    "# replace network_id values containing \"-\" with \"_\"\n",
+    "station_metadata_clean.loc[:,(\"network_id\")] = station_metadata_clean.loc[:,(\"network_id\")].replace(\"-\",\"_\", regex=True)\n",
+    "# reset index\n",
     "station_metadata_clean = station_metadata_clean.reset_index(drop=True)\n",
     "station_metadata_clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
