--- a/notebooks/postgres_database_connection.ipynb
+++ b/notebooks/postgres_database_connection.ipynb
@@ -496,6 +496,219 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solar files: ['BCH_solar.csv', 'CRD_solar.csv', 'FLNRO_FERN_solar.csv', 'UNBC_CAM_solar.csv']\n",
+      "wind files: ['BCH_wind.csv', 'CRD_wind.csv', 'EC_raw_wind.csv', 'ENV_AQN_wind.csv', 'FLNRO_FERN_wind.csv', 'MoTIe_wind.csv', 'MoTIm_wind.csv', 'MVan_wind.csv', 'UNBC_CAM_wind.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create list of wind and solar filenames\n",
+    "\n",
+    "keywords = ['wind', 'solar']\n",
+    "# create list to store wind records\n",
+    "wind_files = []\n",
+    "# create list to store solar records\n",
+    "solar_files = []\n",
+    "# create list of files in data folder\n",
+    "file_names = os.listdir(f\"{path_2}\")\n",
+    "# iterate through files in data folder\n",
+    "for file_name in file_names:\n",
+    "    # match against keywords\n",
+    "    if keywords[0] in file_name:\n",
+    "        wind_files.append(file_name)\n",
+    "    elif keywords[1] in file_name:\n",
+    "        solar_files.append(file_name)\n",
+    "    else: continue\n",
+    "\n",
+    "print(f\"solar files: {solar_files}\")\n",
+    "print(f\"wind files: {wind_files}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting 'time' columnm in BCH_solar to timestamp\n",
+      "Adding values from BCH_solar to solar_data\n",
+      "Converting 'time' columnm in CRD_solar to timestamp\n",
+      "Adding values from CRD_solar to solar_data\n",
+      "Converting 'time' columnm in FLNRO_FERN_solar to timestamp\n",
+      "Adding values from FLNRO_FERN_solar to solar_data\n",
+      "Converting 'time' columnm in UNBC_CAM_solar to timestamp\n",
+      "Adding values from UNBC_CAM_solar to solar_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add solar files to solar_data\n",
+    "functions.merge_tables(solar_files, \"solar_data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting 'time' columnm in BCH_wind to timestamp\n",
+      "Adding values from BCH_wind to wind_data\n",
+      "Converting 'time' columnm in CRD_wind to timestamp\n",
+      "Adding values from CRD_wind to wind_data\n",
+      "Converting 'time' columnm in EC_raw_wind to timestamp\n",
+      "Adding values from EC_raw_wind to wind_data\n",
+      "Converting 'time' columnm in ENV_AQN_wind to timestamp\n",
+      "Adding values from ENV_AQN_wind to wind_data\n",
+      "Converting 'time' columnm in FLNRO_FERN_wind to timestamp\n",
+      "Adding values from FLNRO_FERN_wind to wind_data\n",
+      "Converting 'time' columnm in MoTIe_wind to timestamp\n",
+      "Adding values from MoTIe_wind to wind_data\n",
+      "Converting 'time' columnm in MoTIm_wind to timestamp\n",
+      "Adding values from MoTIm_wind to wind_data\n",
+      "Converting 'time' columnm in MVan_wind to timestamp\n",
+      "Adding values from MVan_wind to wind_data\n",
+      "Converting 'time' columnm in UNBC_CAM_wind to timestamp\n",
+      "Adding values from UNBC_CAM_wind to wind_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add wind files to wind_data\n",
+    "functions.merge_tables(wind_files, \"wind_data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add metadata to database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add explicit path to system file location that pgAdmin can read\n",
+    "path_3 = r\"D:\\School\\LHL\\capstone_project_data\\LHL_Capstone_Project\\data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating station_metadata_clean in database\n"
+     ]
+    }
+   ],
+   "source": [
+    "# upload station metadata to pgAdmin server\n",
+    "functions.create_sql_table('station_metadata_clean.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding columns to station_metadata_clean\n",
+      "Adding columns to station_metadata_clean\n",
+      "Adding columns to station_metadata_clean\n",
+      "Adding columns to station_metadata_clean\n",
+      "Adding columns to station_metadata_clean\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add columns with appropriate dtypes\n",
+    "functions.add_sql_columms('station_metadata_clean.csv', f'{path_2}/metadata/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding values to station_metadata_clean\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add values\n",
+    "functions.add_values('station_metadata_clean.csv', f'{path_3}/metadata/')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create new database tables for wind/solar data joined with station metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "functions.create_joined_table(\"solar_data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "functions.create_joined_table(\"wind_data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Close connection to database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "functions.close_conn()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
